k8s/policies/non-compliant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-compliant-pod
  namespace: devops-ucu
spec:
  containers:
    - name: nginx
      image: nginx:latest # viola política no-latest-tag
