k8s/policies/no-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-root-containers
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: no-root
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Running containers as root is not allowed."
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
